# timefred-dev

./: pyproject.toml  setup.py
tests/: test_timefred.py
timefred/: __init__.py  __main__.py  store.py  time.py  timefred.py
timefred/action/: __init__.py  finish.py  on.py
