[tool.poetry]
name = "timefred"
version = "0.1.0"
description = "Not a silly simple time tracker"
authors = ["Gilad Barnea <giladbrn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
click = "^7.1.2"
loguru = { version = "^0.5.3", optional = true }
arrow = "^1.1.0"

[tool.poetry.dev-dependencies]
better-exceptions = {version = "^0.3.3", optional = true}
icecream = {version = "^2.1.0", optional = true}
ipdb = {version = "^0.13.7", optional = true}
ipython = {version = "^7.22.0", optional = true}
ipython-autoimport = {version = "^0.3", optional = true}
pdbpp = {version = "^0.10.2", optional = true}
pudb = { version = "^2021.1", optional = true }
pytest = "^5.2"
pytest-pudb = "^0.7.0"
rich = {version = "^10.1.0", optional = true}
varname = {version = "^0.6.3", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
